--- a/README.org
+++ b/README.org
@@ -235,7 +235,7 @@ the unit tests:
 Below are links to more information related to this project.
 
 - [Portuguese] [[https://medium.com/@luksamuk/integrando-testes-autom%C3%A1ticos-para-common-lisp-com-docker-e-travis-ci-a3259a79a821][Integrando testes automáticos para Common Lisp com Docker e Travis CI]]
-- [English] [[doc/grammar.pdf][cl-jackc's Grammar Language]] ([[doc/grammar.org][source]])
+- [English] [[doc/grammar.pdf][cl-jackc's Grammar Language]] ([[doc/grammar.org][source]]) ([[HTML][doc/grammar.html]])
 
 * License
 
